<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_place">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_event_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="2" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_budget">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_event_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_date">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:background="@color/colorAccent"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />

</LinearLayout>