<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mission_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_mission_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mission_place">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_mission_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mission_start_date">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_mission_start_date"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mission_end_date">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_mission_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mission_description">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_mission_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="3" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:background="@color/colorAccent"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />

</LinearLayout>