<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="136dp"
        android:background="@android:color/white"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewMissionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_mission_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textViewMissionPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/hint_mission_place"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMissionStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/hint_mission_start_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewMissionEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/hint_mission_end_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewMissionDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/hint_mission_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="35dp"
        android:layout_height="136dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageViewMissionMenu"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="top"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_expand_more_blue_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>