<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_first_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_contact_first_name"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_last_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_contact_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contact_phone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contact_email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:background="@color/colorAccent"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />

</LinearLayout>